# Django

./: .env.sample  Readme.md  catalog_fixture.json  pyproject.toml  readme.md
blogs/: admin.py  models.py  urls.py  views.py
blogs/migrations/: 0001_initial.py  0002_alter.py
blogs/template/blogs/: article_create.html  article_delete.html  article_detail.html  article_list.html  base_blogs.html
blogs/template/includes/: header_menu.html
catalog/: admin.py  catalog_fixture.json  forms.py  models.py  service.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_product_picture.py  0003_product_updated_at.py  0004_product_options.py  0005_product_owner.py  0006_product_description.py  0007_alter_product_options_remove_product_is_publication_and_more.py  0008_alter_product_options_product_is_published_and_more.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product_category.html  product_create.html  product_delete.html  product_detail.html
catalog/templates/catalog/includes/: header_menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/managements/commands/: create_group.py
users/managment/commands/: create_group.py
users/migrations/: 0001_initial.py  0002_customuser_country.py  0003_remove_customuser_username.py  0004_customuser_username.py  0005_remove_customuser_username.py  0006_customuser_options.py  0007_alter_customuser_groups_alter_customuser_is_active_and_more.py
users/templates/users/: login.html  register.html
